Updated index and view actions for technical system controller, and fixed swagger documentations
