# app/Http/Controllers/Swagger/TechnicalSystemController.php
@@ -15,13 +15,23 @@ use App\Http\Controllers\Controller;
  *         response=200,
  *         description="successful operation",
  *         @OA\JsonContent(type="array", @OA\Items(
- *             @OA\Property(property="id", type="integer", example=2),
+ *             @OA\Property(property="id", type="integer", example=1),
  *             @OA\Property(property="code", type="string", example="Some code"),
  *             @OA\Property(property="name", type="string", example="Some name"),
  *             @OA\Property(property="description", type="string", example="Some description"),
  *             @OA\Property(property="parent_technical_system_id", type="integer", example=1),
  *             @OA\Property(property="created_at", type="datetime", example="2023-09-15T01:52:11.000000Z"),
- *             @OA\Property(property="updated_at", type="datetime", example="2023-09-15T01:52:11.000000Z")
+ *             @OA\Property(property="updated_at", type="datetime", example="2023-09-15T01:52:11.000000Z"),
+ *             @OA\Property(property="grandchildren_technical_systems", type="array", @OA\Items(
+ *                 @OA\Property(property="id", type="integer", example=2),
+ *                 @OA\Property(property="code", type="string", example="Some code"),
+ *                 @OA\Property(property="name", type="string", example="Some name"),
+ *                 @OA\Property(property="description", type="string", example="Some description"),
+ *                 @OA\Property(property="parent_technical_system_id", type="integer", example=1),
+ *                 @OA\Property(property="created_at", type="datetime", example="2023-09-15T01:52:11.000000Z"),
+ *                 @OA\Property(property="updated_at", type="datetime", example="2023-09-15T01:52:11.000000Z"),
+ *                 @OA\Property(property="grandchildren_technical_systems", type="array", @OA\Items())
+ *             ))
  *         ))
  *     )
  * ),
